<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="30dp"
        android:layout_weight="1"
        android:layout_marginTop="70dp"
        android:background="@color/white"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_widget"
            android:layout_width="match_parent"
            android:layout_above="@id/age_widget"
            android:padding="10dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/name">

            <EditText
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:id="@+id/name"
                android:background="@drawable/side_nav_bar"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_widget"
            android:layout_width="match_parent"
            android:layout_above="@id/gender_widget"
            android:padding="10dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/age">

            <EditText
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:id="@+id/age"
                android:inputType="number"
                android:background="@drawable/side_nav_bar"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender_widget"
            android:layout_width="match_parent"
            android:layout_above="@id/pwd_widget"
            android:padding="10dp"
            android:paddingBottom="40dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/gender">
            <AutoCompleteTextView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:id="@+id/gender"
                android:paddingTop="50dp"
                android:background="@drawable/side_nav_bar"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd_widget"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/email_widget"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/pwd">

            <EditText
                android:background="@drawable/side_nav_bar"
                android:layout_width="match_parent"
                android:id="@+id/pwd"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/region_widget"
            android:layout_width="match_parent"
            android:layout_below="@id/pwd_widget"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/region">

            <AutoCompleteTextView
                android:padding="15dp"
                android:id="@+id/region"
                android:background="@drawable/side_nav_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/region_widget"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/third_matching_color"
                android:text="@string/update"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>