<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/third_matching_color"
    tools:context=".WoundProfile">

    <RelativeLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_widget"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_above="@+id/size_widget"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/type">

            <AutoCompleteTextView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:id="@+id/type"
                android:background="@drawable/side_nav_bar"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_widget"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_above="@+id/color_widget"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/size">

            <EditText
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:id="@+id/size"
                android:background="@drawable/side_nav_bar"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/color_widget"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:hintTextColor="@color/third_matching_color"
            android:textColorHint="@color/gray"
            android:hint="@string/color">

            <AutoCompleteTextView
                android:background="@drawable/side_nav_bar"
                android:layout_width="match_parent"
                android:id="@+id/color"
                android:padding="15dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_below="@id/color_widget"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:backgroundTint="@color/third_matching_color"
                android:text="@string/add"
                android:id="@+id/add"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/back"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/third_matching_color"
            android:textColor="@color/white"
            android:text="Back to All Wounds"
            />
    </LinearLayout>

</RelativeLayout>