<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sensing"
    >
    <RelativeLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/third_matching_color" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/switchWidget"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/in"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="0dp"
            android:clickable="false"
            android:id="@+id/internalSwitch"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ex"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/externalSwitch"
                android:clickable="false"
                android:alpha="0.5"
                android:layout_weight="1"/>
        </LinearLayout>
        </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/switchWidget"
            android:background="@color/gray"
            />
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/inWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchWidget"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/in"
            android:background="@color/third_matching_color"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text=""
            android:id="@+id/internalRes"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/exWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/third_matching_color"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/ex"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text=""
            android:id="@+id/externalRes"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/feasWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exWidget"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/third_matching_color"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/fes"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text=""
            android:id="@+id/fesRes"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fBottom"
        android:layout_above="@id/srBottom"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/third_matching_color"
            android:text="@string/fes"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:id="@+id/fes"
            android:padding="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/third_matching_color"
            android:text="@string/chart"
            android:textColor="@color/white"
            android:id="@+id/chart"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/srBottom"
        android:layout_above="@id/bwBottom"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/save"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/third_matching_color"
            android:text="@string/sav"
            android:textColor="@color/white"
            android:padding="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/third_matching_color"
            android:text="@string/res"
            android:textColor="@color/white"
            android:id="@+id/reset"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bwBottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/wifiBtn"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/third_matching_color"
            android:text="@string/wifi"
            android:textColor="@color/white"
            android:padding="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/third_matching_color"
            android:text="@string/bluetooth"
            android:textColor="@color/white"
            android:id="@+id/bluBtn"
            android:padding="10dp"
            />
    </LinearLayout>
</RelativeLayout>